# SAB-BYON-OMNI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
colab/: SAB_BYON_OMNI_v2.ipynb
configs/: default.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKS.md  COLAB_GUIDE.md  CONSCIOUSNESS.md  TRAINING.md
sab_byon_omni/: __init__.py  config.py
sab_byon_omni/agents/: __init__.py  base_agent.py  fragmergent_agent.py  memory_agent.py  multi_agent_cortex.py  rl_agent.py
sab_byon_omni/cognitive/: __init__.py  duei_framework.py  fisher_geometry.py  info_density_field.py  personality.py  semantic_photon.py
sab_byon_omni/consciousness/: __init__.py  emergence_detector.py  fragmergent_engine.py  godel_engine.py  icf.py  tdfc_engine.py  time_emergence.py  triadic_state.py  zeta_resonance.py
sab_byon_omni/core/: __init__.py  sab_transcendent.py
sab_byon_omni/evolution/: __init__.py  dim1_universal.py  frag_param.py  metrics_module.py  pathway_evolution.py
sab_byon_omni/memory/: __init__.py  conversation_manager.py  fhrss_fcpe_engine.py  fragmergent_memory.py  holographic_memory.py  infinite_context.py  memory_chunk.py
sab_byon_omni/model/: __init__.py  config.py  omni_agi_nexus.py
sab_byon_omni/quantifiers/: __init__.py  base_quantifier.py  cryptographic_prng.py  decision_confidence_quantifier.py  entropy_quantifier.py  memory_relevance_quantifier.py  quantification_result.py  reasoning_quantifier.py  statistical_quantifier.py
sab_byon_omni/training/: __init__.py  (+1 more)
scripts/: benchmark.py  build_monolithic_notebook.py  demo.py  fix_training_cell.py  train.py
tests/: __init__.py  test_agents.py  test_cognitive.py  test_consciousness.py  test_quantifiers.py
